# quorum-list-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml
.github/workflows/: release.yml
proto/: platform.proto
src/: api.rs  config.rs  grpc_client.rs  main.rs  masternode.rs  masternode_cache.rs  masternode_loader.rs  quorum_list.rs  quorum_loader.rs
terraform/: README.md
terraform/environments/testnet/: main.tf  outputs.tf  variables.tf
terraform/environments/testnet/.terraform/: terraform.tfstate
terraform/environments/testnet/.terraform/modules/: modules.json
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/compute/user-data/: dash-core.sh  quorum-server.sh
terraform/modules/dns/: main.tf  outputs.tf  variables.tf
terraform/modules/loadbalancer/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
