[package]
name = "quorum-list-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dash-sdk = { git = "https://github.com/dashpay/platform", rev = "8a000dfeb9c872c4bfedd8e8974ad1a9d2fdab78" }
crossbeam-channel = "0.5.13"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
bincode = "2.0.0-rc.3"
