[package]
name = "quorum-list-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# dash-sdk = { git = "https://github.com/dashpay/platform", tag = "v1.8.0" }
dashcore = { git = "https://github.com/dashpay/rust-dashcore", tag = "v0.39.6", default-features = false, features = ["std", "secp-recovery", "bincode"] }
dashcore-rpc = { git = "https://github.com/dashpay/rust-dashcore", tag = "v0.39.6" }
crossbeam-channel = "0.5.13"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.8"
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
hex = { version = "0.4.3", features = ["serde"] }
ctrlc = "3.4.5"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
tokio-stream = "0.1"
semver = "1.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
image = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.12"
